GitHub Oauth debug
